--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Bot for the Kirara Fantasia discord",
   "main": "app.js",
   "dependencies": {
+    "cron": "^1.3.0",
     "discord.js": "^11.3.2",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "moment-timezone": "latest"
   },
   "devDependencies": {},
   "scripts": {
