--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Bot for the Kirara Fantasia discord",
   "main": "app.js",
   "dependencies": {
+    "console-timestamp": "^0.3.0",
     "cron": "^1.3.0",
     "discord.js": "^11.3.2",
-    "twitter": "^1.7.1",
-    "moment-timezone": "latest"
+    "moment-timezone": "latest",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {},
   "scripts": {
